# parana

./: README.md
design/: implementation_plan.md  schema.sql  software_design.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  useAuth.ts  useChat.ts  useSession.ts
frontend/src/components/: AuthForm.tsx  ChatPanel.tsx  DynamicResult.tsx  MessageBubble.tsx  ResultTable.tsx  TextBlock.tsx
frontend/src/test/: ResultTable.test.tsx  api.test.ts
importer/: README.md  pyproject.toml
importer/src/parana_importer/: __init__.py  cli.py  db.py  git_meta.py  importer.py  models.py  parser.py  schema.sql  sequences.py
importer/src/parana_importer/migrations/: 0001_initial_schema.py  0002_add_auth_tables.py
importer/tests/: conftest.py  test_git_meta.py  test_importer.py  test_parser.py  test_sequences.py
importer/tests/fixtures/: sample.xml
server/: README.md  pyproject.toml
server/src/parana_server/: __init__.py  auth_utils.py  db.py  deps.py  main.py  models.py  queries.py
server/src/parana_server/routers/: __init__.py  auth.py  chat.py  coverage.py
server/tests/: conftest.py  test_auth.py  test_chat.py  test_coverage_routes.py  test_queries.py
